phpQLAdmin 2.0 Change Log

phpQLAdmin 2.0.18c TO BE ANNOUNCED
	Bug fixes
	  - Add uidNumber, gidNumber and homeDirectory to a mail account IF we've
	    choosen to use 'posixAccount' when creating user(s).

phpQLAdmin 2.0.18b Release (Apr  6 2004)
	Bug fixes
	  - New config option - PQL_CONF_USE_TLS (true/false) which have to be true
	    for ldap_start_tls() to take place.

phpQLAdmin 2.0.18 Release (Apr  4 2004)
	Bug fixes
	  - PHP parse errors fixed.
	    Closes bug 67
	  - Don't use the Control class for Bind9. It looks in the wrong place
	    Closes bug 10
	  - Variable name overloading fixed.
	  - URL decode the domain value when creating the Group DN (pql_user_add()
	    function).
	    Closes bug 57, 70
	  - Wrongfull use of '$ACI_SUPPORT_ENABLED' (should have been
	    '$GLOBALS["ACI_SUPPORT_ENABLED"]').
	  - Fix folding for non-opera. Closes bug 76
	  - Create an array with the URL encoded values for user, rootdn and domain.
	    This is used in every (?) place where there's a distinction between value
	    and URL value (basicly in every 'a href')...
	  - Ability to view, add and delete additional groups (adding the users 'uid'
	    to the groups 'memberUid' attribute).
	    + Only visible if running in advanced mode.
	    Closes bug 71
	  - Move the initialization of the java variable expandedDb from trailer to
	    head.
	    Closes bug 61
	  - When looking in the domain branch if 'ou=DNS' exists, we should do this
	    with the BRANCH dn, not the RESULTING (ou=DNS,BRANCH) dn!
	  - If pql_set_domain_value() is called with an array, it does not nessesarily
	    mean that the whole array contain the same attribute - there might be OTHER
	    attributes in there (which in turn is arrays).
	  - Only setup objectclasses in pql_set_domain_value() (i.e. retreive from object
	    the old values) if we don't already HAVE objectclasses. We might have that
	    if we're called with an array.