@@ -1,8 +1,8 @@
 <?php
 // show details of control
-// $Id: control.php,v 2.2 2003-11-14 11:55:52 turbo Exp $
+// $Id: control.php,v 2.2.12.1 2004-04-07 09:16:14 turbo Exp $
 //
-
+require("./include/pql_config.inc");
 include("./header.html");
 ?>
 <span class="title1">Server Control</span>
