@@ -5,6 +5,10 @@ phpQLAdmin 2.0.18c TO BE ANNOUNCED
 	  - Add uidNumber, gidNumber and homeDirectory to a mail account IF we've
 	    choosen to use 'posixAccount' when creating user(s).
 
+	GUI layout change
+	  - Require the pql_config.inc file to avoid PHP errors in the right frame
+	    when choosing control.php or ezmlm.php.
+
 phpQLAdmin 2.0.18b Release (Apr  6 2004)
 	Bug fixes
 	  - New config option - PQL_CONF_USE_TLS (true/false) which have to be true
